update creating DB